should fix svgs overlapping each other

--- a/main.css
+++ b/main.css
@@ -353,6 +353,7 @@ input[type="button"].small,input[type="submit"].small,input[type="reset"].small,
 .icons li {
     /*display: inline;*/
     display: inline-block;
+    text-align: center;
     width: 32%;
 }
 
@@ -361,8 +362,12 @@ input[type="button"].small,input[type="submit"].small,input[type="reset"].small,
 }
 
 .social_svg {
-    height: 120px;
-    width: 120px;
+    height: 80%;
+    width: 80%;
+    max-width: 120px;
+    max-height: 120px;
+    /*height: 120px;
+    width: 120px;*/
     /*height: 60%;
     width: 60%;*/
 }
